@@ -1658,6 +1658,12 @@ static gboolean accept_net_wm_window_type(NetWMWindowType * nwwt)
 /* Free the names associated with a task. */
 static void task_free_names(Task * tk)
 {
+    TaskClass * tc = tk->p_taskclass;
+
+    if (tc != NULL && tk->name != NULL)
+        /* Reset the name from class */
+        if (tc->visible_name == tk->name)
+            tc->visible_name = tc->res_class;
     g_free(tk->name);
     g_free(tk->name_iconified);
     tk->name = tk->name_iconified = NULL;
@@ -1716,6 +1722,10 @@ static void task_unlink_class(Task * tk)
     TaskClass * tc = tk->p_taskclass;
     if (tc != NULL)
     {
+        /* Reset the name from class */
+        if (tc->visible_name == tk->name)
+            tc->visible_name = tc->res_class;
+
         /* Action in Launchbar after class removed */
         launchbar_update_after_taskbar_class_removed(tk->tb, tk);
 
@@ -1740,6 +1750,7 @@ static void task_unlink_class(Task * tk)
                 tk_pred->p_task_flink_same_class = tk->p_task_flink_same_class;
         }
         tk->p_task_flink_same_class = NULL;
+        tk->p_taskclass = NULL;
 
         /* Recompute group visibility. */
         recompute_group_visibility_for_class(tk->tb, tc);
